force-app/main/default/objects/Global_Mute_Config__c/Global_Mute_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Global Mute Config</label>
</CustomObject>