force-app/main/default/objects/Global_Mute_Config__c/fields/Mute_Flow__c.field-meta.xml
<CustomField>
    <fullName>Mute_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mute Flow</label>
    <type>Checkbox</type>
</CustomField>