force-app/main/default/objects/Global_Mute_Config__c/fields/Mute_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Mute_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mute Trigger</label>
    <type>Checkbox</type>
</CustomField>