force-app/main/default/objects/Global_Mute_Config__c/fields/Mute_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Mute_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mute Validation Rule</label>
    <type>Checkbox</type>
</CustomField>